# edmonds-alg

./: CMakeLists.txt  COPYING  INSTALL  NEWS  README  README.md  Ruby.api  SConstruct  azure-webapps-php.ym
doc/algorithm-description/: algorithm-description.latex
doc/examples/: sparse-example.cpp
doc/html/: index.html
src/: config.h.cmake  edmonds_optimum_branching_impl.hpp
src/c++/: CMakeLists.txt  Doxyfile.cmake  cmdline.cpp  common-opt-naive.hpp  common-opt.hpp  config.h.cmake  disjointset.hpp  max-spanning-arborescence-naive-impl.hpp  max-spanning-arborescence-naive.hpp  max-spanning-arborescence.hpp  optimum-branching-naive.hpp  optimum-branching.hpp  test.cpp  xml.cpp  xml.hpp
src/c++/tests/: CMakeLists.txt  README  msa-big-1.xml  msa-small-1.xml
src/docbook/: CMakeLists.txt  create-images.sh.cmake  helper.sh  index.xml.cmake  params.xsl  to-graphviz.xsl
src/docbook/commands/: help  msa  relaxng  stdin
src/docbook/style/: style.css
src/docbook/xincluded_files/: create-text-chunks.sh
test/: test.cpp  test.py
